fix message wrap

--- a/src/components/message-item/ref-message/style.css
+++ b/src/components/message-item/ref-message/style.css
@@ -80,6 +80,7 @@
   min-width: 0;
   font-size: 15px;
   color: var(--ref-text-color);
+  word-break: break-word;
   font-weight: var(--font-weight-light);
 }
 
