--- a/src/components/messages_container/input/style.css
+++ b/src/components/messages_container/input/style.css
@@ -154,9 +154,3 @@
 .input .section .input_wrapper button:hover {
   --color: var(--primary-color-hover);
 }
-
-@media (max-width: 800px) {
-  .input {
-    box-shadow: 0 1px var(--divider-color) inset;
-  }
-}
